--- a/StudyDirectX/StudyDirectX.vcxproj.filters
+++ b/StudyDirectX/StudyDirectX.vcxproj.filters
@@ -54,6 +54,12 @@
     <ClCompile Include="Engine\Input\Keyboard.cpp">
       <Filter>Engine\Input</Filter>
     </ClCompile>
+    <ClCompile Include="Engine\Input\MouseEvent.cpp">
+      <Filter>Engine\Input</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Input\Mouse.cpp">
+      <Filter>Engine\Input</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="WindowFrame.h">
@@ -91,6 +97,12 @@
     </ClInclude>
     <ClInclude Include="Engine\Graphics\ConstantBufferTypes.h">
       <Filter>Engine\Graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Input\MouseEvent.h">
+      <Filter>Engine\Input</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Input\Mouse.h">
+      <Filter>Engine\Input</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
