추가: 241231 수업내용 반영

--- a/StudyDirectX/StudyDirectX.vcxproj
+++ b/StudyDirectX/StudyDirectX.vcxproj
@@ -156,11 +156,18 @@
     <ClCompile Include="Engine\Graphics\AdapterReader.cpp" />
     <ClCompile Include="Engine\GameEngine.cpp" />
     <ClCompile Include="Engine\Graphics\Graphics.cpp" />
+    <ClCompile Include="Engine\Graphics\ImGUI\imgui.cpp" />
+    <ClCompile Include="Engine\Graphics\ImGUI\imgui_draw.cpp" />
+    <ClCompile Include="Engine\Graphics\ImGUI\imgui_impl_dx11.cpp" />
+    <ClCompile Include="Engine\Graphics\ImGUI\imgui_impl_win32.cpp" />
+    <ClCompile Include="Engine\Graphics\ImGUI\imgui_tables.cpp" />
+    <ClCompile Include="Engine\Graphics\ImGUI\imgui_widgets.cpp" />
     <ClCompile Include="Engine\Graphics\Shaders.cpp" />
     <ClCompile Include="Engine\Input\KeyboardEvent.cpp" />
     <ClCompile Include="Engine\Input\Keyboard.cpp" />
     <ClCompile Include="Engine\Input\MouseEvent.cpp" />
     <ClCompile Include="Engine\Input\Mouse.cpp" />
+    <ClCompile Include="Engine\Time.cpp" />
     <ClCompile Include="WindowContainer.cpp" />
     <ClCompile Include="WindowFrame.cpp" />
     <ClCompile Include="WinMain.cpp" />
@@ -173,12 +180,21 @@
     <ClInclude Include="Engine\Graphics\AdapterReader.h" />
     <ClInclude Include="Engine\GameEngine.h" />
     <ClInclude Include="Engine\Graphics\Graphics.h" />
+    <ClInclude Include="Engine\Graphics\ImGUI\imconfig.h" />
+    <ClInclude Include="Engine\Graphics\ImGUI\imgui.h" />
+    <ClInclude Include="Engine\Graphics\ImGUI\imgui_impl_dx11.h" />
+    <ClInclude Include="Engine\Graphics\ImGUI\imgui_impl_win32.h" />
+    <ClInclude Include="Engine\Graphics\ImGUI\imgui_internal.h" />
+    <ClInclude Include="Engine\Graphics\ImGUI\imstb_rectpack.h" />
+    <ClInclude Include="Engine\Graphics\ImGUI\imstb_textedit.h" />
+    <ClInclude Include="Engine\Graphics\ImGUI\imstb_truetype.h" />
     <ClInclude Include="Engine\Graphics\Shaders.h" />
     <ClInclude Include="Engine\Graphics\Vertex.h" />
     <ClInclude Include="Engine\Input\KeyboardEvent.h" />
     <ClInclude Include="Engine\Input\Keyboard.h" />
     <ClInclude Include="Engine\Input\MouseEvent.h" />
     <ClInclude Include="Engine\Input\Mouse.h" />
+    <ClInclude Include="Engine\Time.h" />
     <ClInclude Include="WindowContainer.h" />
     <ClInclude Include="WindowFrame.h" />
   </ItemGroup>
